updated notebook for slides compatibility

--- a/model-fitting/linear-models.ipynb
+++ b/model-fitting/linear-models.ipynb
@@ -2,22 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Linear models and model selection"
+    "# Linear models and model selection\n",
+    "\n",
+    "### Tom Sasani\n",
+    "#### Quinlan Lab"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### **Part 1**: A lesson from de novo mutation (count) data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### **Part 1**: A lesson from de novo mutation (count) data\n",
+    "\n",
     "Let's imagine that we've sequenced 10 families, each with two parents and between 5-15 children. In each family, we've identified de novo mutations (DNMs) in the children.\n",
     "\n",
     "For each child in each family, we also know the ages at conception for both parents. The goal of this analysis is to figure out whether there are \"real\" differences in parental age effects between families."
@@ -25,7 +31,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### First, let's look at the contents of the DNM files.\n",
     "\n",
@@ -35,21 +45,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "df1 = read.csv('dnms_1.csv')\n",
-    "df2 = read.csv('dnms_2.csv')\n",
     "\n",
     "df1$fam_id = as.factor(df1$fam_id)\n",
-    "df2$fam_id = as.factor(df2$fam_id)\n",
     "\n",
     "head(df1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Now, let's plot the data.\n",
     "\n",
@@ -59,11 +75,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "library(ggplot2)\n",
     "library(cowplot)\n",
+    "library(repr)\n",
+    "options(repr.plot.width=5, repr.plot.height=3)\n",
     "\n",
     "ggplot(df1, aes(x=dad_age, y=dnms, color=fam_id)) +\n",
     "geom_point(size=2) +\n",
@@ -72,7 +94,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "Visually, there's a clear positive relationship between paternal age and the number of DNMs in the sample.\n",
     "\n",
@@ -81,7 +107,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Let's fit a simple linear model."
    ]
@@ -89,7 +119,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "model = lm(dnms ~ dad_age, data=df1)"
@@ -97,7 +131,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "We can also visualize the fit of the model."
    ]
@@ -105,7 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "pred = predict(model, type=\"response\", se.fit=TRUE)\n",
@@ -117,14 +159,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### What is the slope of this model? And is it significant?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "By running `summary` on the fitted model, we can calculate the \"beta,\" or coefficient associated with `dad_age`. This $\\beta$ represents the expected increase in the number of DNMs per unit change in `dad_age`."
    ]
@@ -132,7 +182,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "print(summary(model))"
@@ -140,28 +194,73 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "The output of `summary` is also helpful, as it gives us the p-values associated with the calculated intercept and $\\beta$ values."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "summary(model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "For example, the p-value associated with the `dad_age` $\\beta$ represents the probability that we'd see a $\\beta$ value this extreme, given the null hypothesis that the $\\beta =  0$. The actual p-value comes from a t-test as follows, where $s.e.$ is the standard error of the $\\beta$ estimate:\n",
     "\n",
-    "$t = \\frac{\\beta} {s.e.(\\beta)}$\n",
+    "$t = \\frac{\\beta} {s.e.(\\beta)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "This $t$ value should follow a $t$ distribution on $n - 2$ degrees of freedom *if the true $\\beta = 0$*. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Why $n - 2$? Well, we're estimating two parameters (slope and intercept) in our linear regression, so those things are unchanged in our t-test.\n",
     "\n",
-    "This $t$ value should follow a $t$ distribution on $n - 2$ degrees of freedom *if the true $\\beta = 0$*. Why $n - 2$? Well, we're estimating two parameters (slope and intercept) in our linear regression, so those things are unchanged in our t-test.\n",
-    "\n",
-    "We can confirm the $t$ value reported in `summary` empirically:"
+    "We can confirm the $t$ value reported in `summary` empirically: "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "beta = summary(model)$coefficients[[2]]\n",
@@ -173,14 +272,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Using ANOVA to assess model fit."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Instead of running `summary` on the fitted model, we could also run an analysis of variance (ANOVA). In this particular case, since we have only one independent variable, the ANOVA will tell us effectively the same thing as running `summary`."
    ]
@@ -188,7 +295,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "print(anova(model))"
@@ -196,7 +307,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "In practice, the `anova` is running an $F$-test that compares the the variance explained by the model and the \"leftover,\" or \"residual\" variance *not* explained by the model. This is analogous to an ANOVA that compares within-group to between-group variance. \n",
     "\n",
@@ -214,9 +329,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "In practice, the `anova` is running an $F$-test that compares the the variance explained by the model and the \"leftover,\" or \"residual\" variance *not* explained by the model.\n",
+    "\n",
+    "$$V_{model} = \\sum_{n=i} (\\hat{y_{i}} - \\bar{y})^2$$\n",
+    "\n",
+    "$$V_{residual} = \\sum_{n=i} (y_{i} - \\hat{y_{i}})^2$$\n",
+    "\n",
+    "The $F$ value then represents $\\frac{V_{model}}{V_{residual}}$, and we check to see if the observed $F$ value follows an $F$ distribution with $k-1$ and $N-k$ degrees of freedom for the numerator and denominator, respectively. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "We can prove it by calculating all of this by hand."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "# add our predicted, \"y-hat\" values to the dataframe\n",
@@ -241,14 +388,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### At its core, ANOVA is a method for comparing two models."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "One last note about the ANOVA. If we run `anova(model)`, we're essentially testing whether the reduction in the residual sum of squares after adding a `dad_age` term to the model is significant. In other words, it's comparing two models:\n",
     "\n",
@@ -265,7 +420,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "m1 = lm(dnms ~ 1, data=df1)\n",
@@ -276,14 +435,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "As you can see, the results are exactly the same as in `anova(model)`. In the first line of output, we see that the RSS (residual sum of squares) in the first model is *all* of the variance, since Model 1 produces a flat line, with a slope of 0 and an intercept equal to the grand mean of all points. And that's why in the case of simple linear regression like this, the `anova` output will produce the same results as the `summary` output. "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### What does this look like visually?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Visually, the ANOVA (in the case of simple linear regression) is comparing the following two models and asking: does one of these models significantly reduce the residual sum of squares compared to the other?"
    ]
@@ -291,7 +469,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "ggplot(df1, aes(x=dad_age, y=dnms, col=fam_id)) +\n",
@@ -302,14 +484,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Adding terms to the model to better explain variance."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "So far, we've been grouping all of our data together and fitting a single regression.\n",
     "\n",
@@ -319,9 +509,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
+    "options(repr.plot.width=6, repr.plot.height=6)\n",
+    "\n",
+    "\n",
     "ggplot(df1, aes(x=dad_age, y=dnms, color=fam_id)) +\n",
     "facet_wrap(~fam_id, nrow=5) +\n",
     "geom_point(size=2)"
@@ -329,7 +526,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "If we hypothesize that there are, indeed, differences between the slopes and intercepts of each family's regressions, can we model these differences between families? One option is to fit a new model that considers differences in slopes and intercepts between each family's regression."
    ]
@@ -337,7 +538,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "model_interaction = lm(dnms ~ dad_age + fam_id + dad_age:fam_id, data=df1)"
@@ -345,7 +550,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "This new model adds two terms: `fam_id` and `dad_age:fam_id`. The `fam_id` term is called an \"additive\" term, and `dad_age:fam_id` is called an \"interaction\" term. Let's look at the output of the `summary` function."
    ]
@@ -353,7 +562,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "print(summary(model_interaction))"
@@ -361,7 +574,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "As you can see, the summary output is quite a bit more complicated now. What `R` has done is choose the first family, `fam_id0`, and fit a regression to that family. The least-squares result of that regression produced a line of best fit with a slope of 1.24551 and an intercept of 12.80475. `R` has then fit a regression for every other family, producing a unique intercept and slope value for that family. The numbers in the `estimate` column of the `summary` output represent how much you'd need to \"shift\" the slope and intercept calculated for `fam_id0` to get the slope and intercept for every other family.\n",
     "\n",
@@ -370,7 +587,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "When running a model like this, `R` needs to choose one group (i.e., family) to be the baseline. By default, `R` will choose the first group in your dataframe, which is why `fam_id0` is the baseline here. You can change which baseline group `R` uses as follows:\n",
     "\n"
@@ -379,7 +600,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "df1$fam_id = relevel(df1$fam_id, ref = 6)\n",
@@ -391,14 +616,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "As you can see, `fam_id0` is no longer the baseline, having been swapped for `fam_id6`."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "For each $x$ value, we'd normally predict its $y$ value by simply using the global slope and intercept values we calculated in our first model.\n",
     "\n",
@@ -409,9 +642,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### What does the ANOVA look like for this model?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "print(anova(model_interaction))"
@@ -419,7 +667,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "The ANOVA table is now telling us how significant each of the terms is. In other words, do we significantly reduce the residual sum of squares by adding each term to our model? \n",
     "\n",
@@ -439,14 +691,35 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "NOTE: the way the ANOVA works means that terms are added sequentially. This means that more and more variance is explained each time we add a term, and by the time we add the last term (the interaction term), much of the variance has already been \"soaked up\" by the first two terms. And `R` *always* adds interaction terms last."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(anova(model_interaction))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "In this example, we see that adding a `fam_id` term improves the fit of the model, but adding the `dad_age:fam_id` term on top of that doesn't produce a significantly better fit. We can interpret this as meaning that the intercepts significantly differ between families, but slopes do not. This makes sense, sense I simulated the data such that each family has approximately the same slope, but different intercepts."
    ]
@@ -460,7 +733,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Visualizing residuals from a simple linear regression\n",
     "\n",
@@ -470,9 +747,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
+    "options(repr.plot.width=4, repr.plot.height=4)\n",
+    "\n",
+    "\n",
     "m1 = lm(dnms ~ dad_age, data=df1)\n",
     "\n",
     "df1$predictions = predict(m1)\n",
@@ -488,7 +772,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Visualizing residuals from a model with interaction\n",
     "\n",
@@ -498,7 +786,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "m2 = lm(dnms ~ dad_age * fam_id, data=df1)\n",
